unpackaged/main/default/objects/Account/fields/Accepts_Credit_Cards__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Credit_Cards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepts Credit Cards</label>
    <type>Checkbox</type>
</CustomField>