unpackaged/main/default/objects/Account/fields/Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance__c</fullName>
    <description>R1915778</description>
    <inlineHelpText>Balance from the related MyCase or AppFolio Billing Account</inlineHelpText>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>