unpackaged/main/default/objects/Account/fields/Account_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_By__c</fullName>
    <inlineHelpText>Indicates how the account was created when created via automation</inlineHelpText>
    <label>Account Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>