unpackaged/main/default/objects/Account/fields/Account_DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_DBA_Name__c</fullName>
    <description>updated per R1710014</description>
    <formula>IF(NOT(ISBLANK(  Full_Company_Name_DBA__c  )) &amp;&amp; LOWER(Full_Company_Name_DBA__c) != &#39;n/a&#39; &amp;&amp; LOWER(Full_Company_Name_DBA__c) != &#39;na&#39;, Full_Company_Name_DBA__c, IF(CONTAINS(Name, &quot;DBA&quot;), RIGHT(Name, LEN(Name)-FIND(&quot;DBA &quot;, Name)-3),  Account_Legal_Name__c ))</formula>
    <label>Account DBA Name</label>
    <type>Text</type>
</CustomField>