unpackaged/main/default/objects/Account/fields/Account_ID_18_digit__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18_digit__c</fullName>
    <description>18 digit ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID (18 digit)</label>
    <type>Text</type>
</CustomField>