unpackaged/main/default/objects/Account/fields/Account_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Legal_Name__c</fullName>
    <description>updated per R1710014</description>
    <formula>IF(NOT(ISBLANK(  Full_Company_Name_Legal__c  )), Full_Company_Name_Legal__c, IF(CONTAINS(Name, &quot;DBA&quot;), LEFT(Name, FIND(&quot; DBA &quot;, Name)), Name))</formula>
    <label>Account Legal Name</label>
    <type>Text</type>
</CustomField>