unpackaged/main/default/objects/Account/fields/Account_Owner_hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_hyperlink__c</fullName>
    <formula>HYPERLINK(OrgURL__c  +  Owner.Id  ,  Owner.FirstName  +&#39; &#39;+  Owner.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>