unpackaged/main/default/objects/Account/fields/Account_Owner_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Inactive__c</fullName>
    <description>R166606</description>
    <formula>Owner.IsActive = FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Inactive</label>
    <type>Checkbox</type>
</CustomField>