unpackaged/main/default/objects/Account/fields/Account_Status_Flag_Solunus__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Flag_Solunus__c</fullName>
    <description>Used by Soluno for displaying a graphic on account based on Account Type</description>
    <formula>IF ( Text(Type) = &#39;Customer&#39; ,  IMAGE(&quot;/resource/Flag_Green&quot;, &quot;Customer&quot;, 17, 17) &amp; &#39; Active Customer&#39;,
   IF ( Text(Type) = &#39;Customer Lost&#39;, IMAGE(&quot;/resource/Flag_Red&quot;, &quot;Customer Lost&quot;, 22, 22) &amp; &#39; Customer Lost&#39;,
       IF ( Text(Type) = &#39;Prospect&#39;, IMAGE(&quot;/resource/Flag_Blue&quot;, &quot;Prospect&quot;, 17, 17) &amp; &#39; Prospect&#39;,
          IF ( Text(Type) = &#39;Test Account&#39;, IMAGE(&quot;/resource/Flag_Yellow&quot;, &quot;Customer Lost&quot;, 17, 17) &amp; &#39; Test Account&#39;,
            IF ( Text(Type) = &#39;Other&#39;, IMAGE(&quot;/resource/Flag_Purple&quot;, &quot;Customer Lost&quot;, 17, 17) &amp; &#39; Other&#39;,

 &#39;&#39; )))))</formula>
    <label>zz Account Status</label>
    <type>Text</type>
</CustomField>