unpackaged/main/default/objects/Account/fields/Accounting_Expiry_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Expiry_Date_Change__c</fullName>
    <description>This is the field that receives the date that the AE has updated the Accounting trial expiration to.</description>
    <label>Accounting Expiry Date Change</label>
    <type>Date</type>
</CustomField>