unpackaged/main/default/objects/Account/fields/Accounting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Notes__c</fullName>
    <description>R151719</description>
    <label>Accounting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>