unpackaged/main/default/objects/Account/fields/AE_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>AE_Manager_Email__c</fullName>
    <label>AE Manager Email</label>
    <type>Email</type>
</CustomField>