unpackaged/main/default/objects/Account/fields/AP_Retention_Notes__c.field-meta.xml
<CustomField>
    <fullName>AP_Retention_Notes__c</fullName>
    <label>AP Retention Notes</label>
    <type>TextArea</type>
</CustomField>