unpackaged/main/default/objects/Account/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <formula>IF(BEGINS(Phone,&quot;(&quot;),MID(Phone,2,3),LEFT(Phone, 3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Code</label>
    <type>Text</type>
</CustomField>