unpackaged/main/default/objects/Account/fields/Assign_MQA__c.field-meta.xml
<CustomField>
    <fullName>Assign_MQA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign MQA</label>
    <type>Checkbox</type>
</CustomField>