unpackaged/main/default/objects/Account/fields/Attachments_Received__c.field-meta.xml
<CustomField>
    <fullName>Attachments_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachments Received</label>
    <type>Checkbox</type>
</CustomField>