unpackaged/main/default/objects/Account/fields/Avvo_Page__c.field-meta.xml
<CustomField>
    <fullName>Avvo_Page__c</fullName>
    <description>To provide websites with an Avvo page listing if the firm has one.</description>
    <label>Avvo Page</label>
    <length>250</length>
    <type>Text</type>
</CustomField>