unpackaged/main/default/objects/Account/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <description>R1915778</description>
    <inlineHelpText>Balance Due from the related MyCase or AppFolio Billing Account</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>