unpackaged/main/default/objects/Account/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Needed to locate the billing account number for billing accounts with active subscriptions.</description>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>BillingAccount</relationshipName>
    <type>Lookup</type>
</CustomField>