unpackaged/main/default/objects/Account/fields/Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Number__c</fullName>
    <formula>Billing_Account__r.Zuora_Billing_Account_Number__c</formula>
    <label>Billing Account Number</label>
    <type>Text</type>
</CustomField>