unpackaged/main/default/objects/Account/fields/Billing_Country_Avatax__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Avatax__c</fullName>
    <description>Used to translate abbreviated country codes to Long name for usage with Avalara/Avatax</description>
    <formula>CASE(Upper(BillingCountry) ,
&quot;US&quot;, &quot;United States&quot;,
&quot;USA&quot;, &quot;United States&quot;,
&quot;CA&quot;, &quot;Canada&quot;,
&quot;CAN&quot;, &quot;Canada&quot;,
BillingCountry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country (Avatax)</label>
    <type>Text</type>
</CustomField>