unpackaged/main/default/objects/Account/fields/Bookkeeper__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Soluno</description>
    <label>Bookkeeper</label>
    <type>Checkbox</type>
</CustomField>