unpackaged/main/default/objects/Account/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <inlineHelpText>Distinguishes the enterprise level clients from the smaller (SMB) clients</inlineHelpText>
    <label>Business Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Segment</valueSetName>
    </valueSet>
</CustomField>