unpackaged/main/default/objects/Account/fields/Business_Structure_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Structure_Number__c</fullName>
    <description>Converts picklist value to number for profit stars</description>
    <formula>CASE(Ownership_Type__c, 
&quot;Sole Proprietor&quot;, 1, 
&quot;Partnership&quot;, 2, 
&quot;Limited Liability Partnership&quot;, 3, 
&quot;LLP&quot;, 3, 
&quot;Corporation&quot;, 4, 
&quot;LLC&quot;, 5, 
&quot;Limited Liability Company&quot;, 5, 
&quot;S Corporation&quot;, 6, 
&quot;Not For Profit&quot;, 7, 
&quot;Government&quot;, 8, 
&quot;Broker&quot;, 1, 
&quot;Corporation or LLC&quot;, 9 
,1 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Structure Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>