unpackaged/main/default/objects/Account/fields/Buy_Now__c.field-meta.xml
<CustomField>
    <fullName>Buy_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set to true, a new Buy Now opp is created.</description>
    <label>Buy Now</label>
    <type>Checkbox</type>
</CustomField>