unpackaged/main/default/objects/Account/fields/Bypass_Duplicate_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Duplicate_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when account should be bypassing duplicate rules through automation</description>
    <label>Bypass Duplicate Rules</label>
    <type>Checkbox</type>
</CustomField>