unpackaged/main/default/objects/Account/fields/Cancellation_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Requested_Date__c</fullName>
    <description>#4940 Cancellation requested date as captured in MyCase app.</description>
    <label>Cancellation Requested Date</label>
    <type>Date</type>
</CustomField>