unpackaged/main/default/objects/Account/fields/Charge_Customer__c.field-meta.xml
<CustomField>
    <fullName>Charge_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-checked through flow when process is fun by finance to re-charge declined credit cards in Zuora</description>
    <label>Charge Customer</label>
    <type>Checkbox</type>
</CustomField>