unpackaged/main/default/objects/Account/fields/Churn_Date__c.field-meta.xml
<CustomField>
    <fullName>Churn_Date__c</fullName>
    <description>Date customer notified AppFolio that they would be churning; R1814702 - remove FLS</description>
    <inlineHelpText>Date customer notified AppFolio that they would be churning.</inlineHelpText>
    <label>Churn Notification Date</label>
    <type>Date</type>
</CustomField>