unpackaged/main/default/objects/Account/fields/Churn_Details__c.field-meta.xml
<CustomField>
    <fullName>Churn_Details__c</fullName>
    <description>R165289; R1814702 - remove FLS</description>
    <label>Churn Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>