unpackaged/main/default/objects/Account/fields/Churn_Notes__c.field-meta.xml
<CustomField>
    <fullName>Churn_Notes__c</fullName>
    <description>R1814702 - remove FLS</description>
    <label>Churn Notes</label>
    <type>TextArea</type>
</CustomField>