unpackaged/main/default/objects/Account/fields/Churn_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Churn_Outreach__c</fullName>
    <description>R165289; R1814702 - remove FLS</description>
    <label>Churn Outreach</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>