unpackaged/main/default/objects/Account/fields/Churn_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason__c</fullName>
    <description>Churn reason as provided by the customer in the MyCase app.</description>
    <label>zz Churn Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Issues</fullName>
            </value>
            <value>
                <fullName>Business Change</fullName>
            </value>
            <value>
                <fullName>Declined Credit Card</fullName>
            </value>
            <value>
                <fullName>Expired Credit Card</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Product Fit</fullName>
            </value>
            <value>
                <fullName>Sales Expectations</fullName>
            </value>
            <value>
                <fullName>Support Expectations</fullName>
            </value>
            <value>
                <fullName>Went Dark / Past Due</fullName>
            </value>
            <value>
                <fullName>Business Issue: Out of Business/Downsized/Didn&#39;t Grow/Other Focus</fullName>
            </value>
            <value>
                <fullName>Business Issue: Health/Audit/Underwriting</fullName>
            </value>
            <value>
                <fullName>Business Issue: Merged w/ APM Customer</fullName>
            </value>
            <value>
                <fullName>Expectations: Business Fit/Product Features/Value</fullName>
            </value>
            <value>
                <fullName>Expectations: Resources/Key Stakeholder/Transition to APM</fullName>
            </value>
            <value>
                <fullName>Expectations: Implementation/Support/Training</fullName>
            </value>
            <value>
                <fullName>Don’t Know: Went Dark/Non-Payment</fullName>
            </value>
            <value>
                <fullName>I can&#39;t afford it</fullName>
            </value>
            <value>
                <fullName>I am using a different software</fullName>
            </value>
            <value>
                <fullName>I don&#39;t use it enough</fullName>
            </value>
            <value>
                <fullName>I am closing my business</fullName>
            </value>
            <value>
                <fullName>MyCase doesn&#39;t have certain features that I need</fullName>
            </value>
            <value>
                <fullName>Partner Opted out of Program</fullName>
            </value>
            <value>
                <fullName>We Opted Out of Partnership</fullName>
            </value>
            <value>
                <fullName>Development Resources Not Available</fullName>
            </value>
            <value>
                <fullName>My firm is closing</fullName>
            </value>
            <value>
                <fullName>We don&#39;t use it enough</fullName>
            </value>
            <value>
                <fullName>We are switching to a different product</fullName>
            </value>
            <value>
                <fullName>MyCase doesn&#39;t have the features I need</fullName>
            </value>
            <value>
                <fullName>It&#39;s too expensive</fullName>
            </value>
            <value>
                <fullName>Auto-Canceled After Suspension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>