unpackaged/main/default/objects/Account/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field - displays the Account Record Type Name</inlineHelpText>
    <label>Classification</label>
    <type>Text</type>
</CustomField>