unpackaged/main/default/objects/Account/fields/Closed_Other_Reason_Explained__c.field-meta.xml
<CustomField>
    <fullName>Closed_Other_Reason_Explained__c</fullName>
    <label>Closed &quot;Other&quot; Reason Explained</label>
    <type>TextArea</type>
</CustomField>