unpackaged/main/default/objects/Account/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closing Business / No Longer in Business</fullName>
            </value>
            <value>
                <fullName>Not Processing / No Activity</fullName>
            </value>
            <value>
                <fullName>Switched Processors</fullName>
            </value>
            <value>
                <fullName>Software Change</fullName>
            </value>
            <value>
                <fullName>Unsatisfied with Rates &amp; Fees</fullName>
            </value>
            <value>
                <fullName>Pass-Through Fees</fullName>
            </value>
            <value>
                <fullName>2022 Price Change</fullName>
            </value>
            <value>
                <fullName>Unsatisfied with Service</fullName>
            </value>
            <value>
                <fullName>Unsatisfied with product features</fullName>
            </value>
            <value>
                <fullName>Equipment Issues/Malfunctioning</fullName>
            </value>
            <value>
                <fullName>Credit cards no longer accepted</fullName>
            </value>
            <value>
                <fullName>Merged/Joined firm already using our service</fullName>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>PCI Fee</fullName>
            </value>
            <value>
                <fullName>WorldPay Cancellation</fullName>
            </value>
            <value>
                <fullName>Deposit (Day) Delay</fullName>
            </value>
            <value>
                <fullName>*Other (see closed other explained)</fullName>
            </value>
            <value>
                <fullName>ACH Rejects</fullName>
            </value>
            <value>
                <fullName>Excessive Chargebacks</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Reason Unknown</fullName>
            </value>
            <value>
                <fullName>Switched to Local Bank</fullName>
            </value>
            <value>
                <fullName>TAX ID EIN Change</fullName>
            </value>
            <value>
                <fullName>Backbill Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>