unpackaged/main/default/objects/Account/fields/Commission_Full_Service__c.field-meta.xml
<CustomField>
    <fullName>Commission_Full_Service__c</fullName>
    <defaultValue>0.2</defaultValue>
    <description>Used on Soluno Contractor records to set base commission % for the contractor</description>
    <label>Commission: Full Service</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>