unpackaged/main/default/objects/Account/fields/Commission_Override__c.field-meta.xml
<CustomField>
    <fullName>Commission_Override__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Use to change the Consultant Commission % at the account level</inlineHelpText>
    <label>Commission Override %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>