unpackaged/main/default/objects/Account/fields/Commission_Referral_Only__c.field-meta.xml
<CustomField>
    <fullName>Commission_Referral_Only__c</fullName>
    <defaultValue>0.05</defaultValue>
    <label>Commission: Referral Only</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>