unpackaged/main/default/objects/Account/fields/Commission_Sales_Process__c.field-meta.xml
<CustomField>
    <fullName>Commission_Sales_Process__c</fullName>
    <defaultValue>0.1</defaultValue>
    <description>Used on Soluno Contractor records to set commission value when assigned to a customer.</description>
    <label>Commission: Sales Process</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>