unpackaged/main/default/objects/Account/fields/Commissions_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Termination_Date__c</fullName>
    <inlineHelpText>Soluno: date that commissions are scheduled to end.</inlineHelpText>
    <label>Commissions Termination Date</label>
    <type>Date</type>
</CustomField>