unpackaged/main/default/objects/Account/fields/Commissions_Termination_Flag__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Termination_Flag__c</fullName>
    <formula>IF(TODAY()+30=Commissions_Termination_Date__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissions Termination Flag</label>
    <type>Text</type>
</CustomField>