unpackaged/main/default/objects/Account/fields/Contingency_Billing_Only__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Billing_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates customer is not a fit for MyCase Payments</description>
    <label>Contingency Billing Only</label>
    <type>Checkbox</type>
</CustomField>