unpackaged/main/default/objects/Account/fields/Contract_Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>Contract_Effective_Start__c</fullName>
    <inlineHelpText>Roll-up Summary field based on MIN: Subscription Contract - Effective Date</inlineHelpText>
    <label>Contract Effective Start</label>
    <summarizedField>Contract__c.Effective_Date__c</summarizedField>
    <summaryForeignKey>Contract__c.Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>