unpackaged/main/default/objects/Account/fields/Contracted_Users__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Users__c</fullName>
    <label>Contracted Users</label>
    <summarizedField>Contract__c.Contracted_Users_Roll_up__c</summarizedField>
    <summaryFilterItems>
        <field>Contract__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>