unpackaged/main/default/objects/Account/fields/Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date__c</fullName>
    <description>R165289</description>
    <label>Conversion Date</label>
    <type>Date</type>
</CustomField>