unpackaged/main/default/objects/Account/fields/Converted_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is populated upon conversion (through field mapping) to signal whether the Account was created through Lead conversion. It is used in validation and automation.</description>
    <label>Converted from Lead</label>
    <type>Checkbox</type>
</CustomField>