unpackaged/main/default/objects/Account/fields/CPACharge_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>CPACharge_Customer_Status__c</fullName>
    <label>CPACharge Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Status_Values</valueSetName>
    </valueSet>
</CustomField>