unpackaged/main/default/objects/Account/fields/Create_Account_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Create_Account_Numbers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When selected Customer Number and first Serial Number will be created</inlineHelpText>
    <label>Create Account/Subscription Numbers</label>
    <type>Checkbox</type>
</CustomField>