unpackaged/main/default/objects/Account/fields/Create_Firm_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Create_Firm_Master_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Firm Master ID</label>
    <type>Checkbox</type>
</CustomField>