unpackaged/main/default/objects/Account/fields/Credit_Card_Stage__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Stage__c</fullName>
    <label>Credit Card Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credentialing Complete</fullName>
            </value>
            <value>
                <fullName>Ready to Transmit to Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Transmitted to Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>