unpackaged/main/default/objects/Account/fields/Current_Email_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Email_Solution__c</fullName>
    <label>Current Email Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Solution</valueSetName>
    </valueSet>
</CustomField>