unpackaged/main/default/objects/Account/fields/Current_File_Mgmt_System__c.field-meta.xml
<CustomField>
    <fullName>Current_File_Mgmt_System__c</fullName>
    <label>Current File Mgmt System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_File_Mgmt_System</valueSetName>
    </valueSet>
</CustomField>