unpackaged/main/default/objects/Account/fields/Current_LPM__c.field-meta.xml
<CustomField>
    <fullName>Current_LPM__c</fullName>
    <inlineHelpText>Current LPM aka Current_Solution__c</inlineHelpText>
    <label>Current LPM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_LPM</valueSetName>
    </valueSet>
</CustomField>