unpackaged/main/default/objects/Account/fields/Current_LPM_other__c.field-meta.xml
<CustomField>
    <fullName>Current_LPM_other__c</fullName>
    <description>R1813150</description>
    <label>Current LPM Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>