unpackaged/main/default/objects/Account/fields/Currently_Processing__c.field-meta.xml
<CustomField>
    <fullName>Currently_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the client already started processing transactions?</description>
    <label>Currently Processing</label>
    <type>Checkbox</type>
</CustomField>