unpackaged/main/default/objects/Account/fields/Custom_Order_Form__c.field-meta.xml
<CustomField>
    <fullName>Custom_Order_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1810403</description>
    <label>Custom Order Form</label>
    <type>Checkbox</type>
</CustomField>