unpackaged/main/default/objects/Account/fields/Customer_Contacted_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contacted_Cancellation_Date__c</fullName>
    <label>Customer Contacted Cancellation Date</label>
    <type>Date</type>
</CustomField>